fix(Loading): z-index

--- a/.vitepress/theme/index.scss
+++ b/.vitepress/theme/index.scss
@@ -53,9 +53,9 @@ p {
 }
 
 aside {
-  z-index: 10000;
+  z-index: 100;
 }
 
 header {
-  z-index: 10001;
+  z-index: 101;
 }
